# open-swim

./: .dockerignore  .gitignore  Dockerfile  build-local-amd64.bat  docker-compose.yml  pyproject.toml
api/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  agents.md  build-push-arm64.bat  docker-compose.yml  pyproject.toml
api/.claude/: settings.local.json
api/docs/: architecture.md
api/plans/: windows-service-nssm.md
api/plans/fix-sync-state-on-error/: brief.md  plan.md
api/plans/mqtt-client-api/: brief.md  plan.md
api/plans/youtube-audio-intro/: brief.md  plan.md
api/src/open_swim/: app.py  config.py  device_library_sync.py  device_monitor.py  file_tools.py  library_info.py  main.py  mp3_downloader.py  mqtt_client.py  playlist_extractor.py  playlist_library_sync.py  playlist_sync.py  podcast_sync.py  sync.py  volume_normalizer.py
api/src/open_swim/device/: __init__.py  device_playlist_dirs_sync.py  device_sync.py  device_youtube_sync.py  monitor.py  safely_eject.py
api/src/open_swim/device/linux/: __init__.py  monitor.py  mount.py
api/src/open_swim/device/podcast/: __init__.py  device_podcast_dirs_sync.py  device_podcast_sync.py
api/src/open_swim/device/sync/: device_sync.py  state.py
api/src/open_swim/device/sync/podcast/: __init__.py  device_podcast_dirs_sync.py  device_podcast_sync.py
api/src/open_swim/device/sync/youtube/: device_playlist_dirs_sync.py  device_youtube_sync.py  sanitize.py
api/src/open_swim/device/windows/: README.md  __init__.py  monitor.py  mount.py
api/src/open_swim/device/youtube/: device_playlist_dirs_sync.py
api/src/open_swim/media/podcast/: episode_processor.py  episodes.py  episodes_to_sync.py  models.py  store.py  sync.py
api/src/open_swim/media/youtube/: device_sync.py  download.py  intro_processor.py  library.py  library_sync.py  models.py  normalize.py  playlists.py  playlists_to_sync.py  store.py
api/src/open_swim/messaging/: __init__.py  models.py  mqtt.py  progress.py
api/src/open_swim/podcast/: episodes_to_sync.py  podcast_sync.py  podcasts_to_sync.py
api/src/open_swim/storage/: file_ops.py
api/src/open_swim/youtube/: device_library_sync.py  library_info.py  playlist_extractor.py  playlist_library_sync.py  playlist_to_sync.py  volume_normalizer.py
client/: .gitignore  AGENTS.md  CLAUDE.md  README.md  (+1 more)
(+40 files in other folders)
